correction js. Ajout css

--- a/application/index.html
+++ b/application/index.html
@@ -7,18 +7,20 @@
 	<script type="text/javascript" src="js/keyboard.js"></script>
 	<script type="text/javascript" src="js/visualizer.js"></script>
 	<link rel="stylesheet" type="text/css" href="style/audiovisual.css" />
+    <link rel="stylesheet" type="text/css" href="style/fontello-codes.css" />
+    <link rel="stylesheet" type="text/css" href="style/fontello-embedded.css" />
+    <link rel="stylesheet" type="text/css" href="style/fontello.css" />
 </head>
 <body>
-	<h1>Audio visualization</h1>
-    
+
 	<div id="keyboard">
 		<canvas id="canvas" width="300" height="300">
 			A super interesting wave function
 		</canvas>
-		<div>
-			<button id="startAudio">Start listening</button>
-			<button id="switchLayout" class="key">Switch layout</button>
+		<div> 
+			<button id="switchAudio" class="start"><i id="switch-icon" class="icon-mic"></i></button>
+            <button id="switchLayout" class="key startLayout"><i id="switch-icon" class="icon-keyboard"></i></button>
 		</div>
 	</div>
 </body>
-</html>
+</html> 
