--- a/firespeech/client/speech.html
+++ b/firespeech/client/speech.html
@@ -10,10 +10,23 @@
 	<body>
 		<h1>FireSpeech</h1>
 		<h2>Parles et j'écris</h2>
-		Il suffit de parler et ce que vous dites apparaîtra ci-dessous. Comme par magie !<br/>
-		Ensuite, corrigez votre texte, copiez-le et collez le où bon vous semble.
+		<p>
+			Il suffit de parler et ce que vous dites apparaîtra ci-dessous. Comme par magie !<br/>
+			Ensuite, corrigez votre texte, copiez le et collez le où bon vous semble.
+		</p>
+		
 		<h3>Voici ce que vous avez dit :</h3>
-		<textarea type="text" id="resultat" rows="10" cols="60"></textarea>
-		<!-- <div id="resultat"></div> -->
+		<p>
+			<textarea type="text" id="resultat" rows="10" cols="60"></textarea>
+		</p>
+		
+		<br/>
+		<p>
+		<!--	<button id="start">Démarrer</button> -->
+			<button id="copy">Copier votre texte</button>
+		</p>
+		
+		
+		<script src="scripts/annexes.js"></script>
 	</body>
 </html>
