--- a/firespeech/client/speech.html
+++ b/firespeech/client/speech.html
@@ -122,7 +122,8 @@
 					<div class="col-md-12 text-center">
 						<!-- FOOTER COPYRIGHT -->
 						<div class="copyright-info">
-							<a href="http://themebite.com">Design By <span>ThemeBite</span></a>
+							<a href="http://themebite.com">Designed by <span>ThemeBite</span></a><br/>
+							<a href="https://github.com/mikaSez/DLL4-VoiceInputFOS">Developed by <span>mikaSez & PurpleA</span></a>
 						</div>
 
 						<!-- FOOTER SOCIAL ICONS -->
