FireSpeech : Ajout des boutons Start et Stop pour démarrer et arrêter la reconnaissance vocale

--- a/firespeech/client/speech.html
+++ b/firespeech/client/speech.html
@@ -108,8 +108,9 @@
 				</div>
 				
 				<div class="portfolio-button text-center mt-50">
-					<!-- <button class="btn btn-primary portfolio-btn" id="">Start</button> -->
+					<button class="btn btn-primary portfolio-btn" id="start">Start</button>
                     <button class="btn btn-primary portfolio-btn" id="copy">Copy your text</button>
+                    <button class="btn btn-primary portfolio-btn" id="stop">Stop</button>
                 </div>
 			</div>
 		</section>
@@ -145,5 +146,6 @@
         <!-- Bootstrap JS -->
         <script src="js/bootstrap.min.js"></script>
 		<script src="scripts/annexes.js"></script>
+		
 	</body>
 </html>
