FireSpeech : Ajout du manifest pour une intégration future à FirefoxOS + Mise en page du document de reconnaissance vocale

--- a/firespeech/client/speech.html
+++ b/firespeech/client/speech.html
@@ -43,6 +43,7 @@
 
 		<!-- Mon script et mon css -->
 		<script src="scripts/speech.js"></script>
+		<script type="text/javascript" src="scripts/keyboard.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/speech.css" />
 	</head>
 	<body>
